# neo-setup-scripts

./: CODEOWNERS  LICENSE  README.md  ado_webhook_deletion.py  pyproject.toml  webhook_data_dump.py
neo_setup_scripts/: ado_webhook_creator.py  github_webhook_creator.py  gitlab_webhook_creator.py
scripts/: ado_webhook_creator.py  bitbucket_webhook_creator.py  bitbucket_webhook_deletion.py  github_webhook_deleter.py  jira_webhook_creator.py
